--- a/hueimages/build.gradle
+++ b/hueimages/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'hue'
+    bintrayName = 'hueimages'
+
+    publishedGroupId = 'systems.maju'
+    libraryName = 'Hue Images Library'
+    artifact = 'hueimages'
+
+    libraryDescription = 'Android library for receiving the Philips Hue product images.'
+
+    siteUrl = 'https://github.com/JulianEggers/HueImages'
+    gitUrl = 'https://github.com/JulianEggers/HueImages.git'
+
+    libraryVersion = '0.1'
+
+    developerId = 'julianeggers'
+    developerName = 'Julian Eggers'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
@@ -7,7 +31,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,3 +50,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'install.gradle'
+apply from: 'bintray.gradle'
