--- a/hueimages/build.gradle
+++ b/hueimages/build.gradle
@@ -13,7 +13,7 @@ ext {
     siteUrl = 'https://github.com/JulianEggers/HueImages'
     gitUrl = 'https://github.com/JulianEggers/HueImages.git'
 
-    libraryVersion = '0.7'
+    libraryVersion = '0.8'
 
     developerId = 'julianeggers'
     developerName = 'Julian Eggers'
@@ -25,13 +25,13 @@ ext {
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 7
-        versionName "0.7"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 28
+        versionCode 8
+        versionName "0.8"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -42,12 +42,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
 }
 
 apply from: 'install.gradle'
