--- a/hueimages/bintray.gradle
+++ b/hueimages/bintray.gradle
@@ -40,6 +40,7 @@ bintray {
         publish = true
         publicDownloadNumbers = true
         version {
+            name = libraryVersion
             desc = libraryDescription
             gpg {
                 sign = false //Determines whether to GPG sign the files. The default is false
