--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,18 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
-}
-
-plugins {
-    id "com.jfrog.bintray" version "1.8.4"
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
+}
+
+dependencies {
+    implementation 'com.github.JulianEggers:HueImages:v0.9'
 }
 
